--- a/Computer Hardware/EstudoDirigido-CH.Rmd
+++ b/Computer Hardware/EstudoDirigido-CH.Rmd
@@ -3,7 +3,9 @@
 title: "Análise de Dados - Aula 1"
 author: "Ítalo e José Antonio"
 date: "`r Sys.Date()`"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ##### Análise de Dados - Aula 1 #####
@@ -18,11 +20,15 @@ knitr::opts_chunk$set(echo = TRUE)
 Nesta questão, carregamos o conjunto de dados `iris` e visualizamos sua estrutura utilizando a função `View()`.
 
 ```{r}
-# Carregar o dataset iris
-data(iris)
+# Carregar os dados da arquivo para um dataset - computer+hardware
+data <- read.table("C:/Users/2019101100910126/Documents/Github/EstudoDirigindo-MinecaoDeDados/Computer Hardware/computer+hardware/machine.data", header=FALSE, sep=",")
+
 
 # Visualizar o dataset
-View(iris)
+View(data)
+
+
+
 ```
 
 ### Questão 2
